--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,7 @@ requests==2.24.0
 six==1.14.0
 SQLAlchemy==1.3.17
 urllib3==1.25.9
-
+virtualenv==20.0.20
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
+setuptools==41.2.0
